syntax = "proto3";

package pb;

option go_package = "internal/data/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "dtos/history_traffic_data_detection_section.proto";
import "dtos/traffic_requests.proto";
import "dtos/traffic_responses.proto";


option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
};

service HistoryDayTrafficDataByDetectionSectionService {
  rpc ListHistoryDayTrafficDataByDetectionSection(ListTrafficDataByDetectionSectionRequest) returns (ListHistoryDayTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_section/list"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetHistoryDayTrafficDataByDetectionSection(GetTrafficDataByDetectionSectionRequest) returns (GetHistoryDayTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_section/single"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc CreateHistoryDayTrafficDataByDetectionSection(CreateHistoryDayTrafficDataByDetectionSectionRequest) returns (CreateHistoryDayTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/history_day/detection_section",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc UpdateHistoryDayTrafficDataByDetectionSection(UpdateHistoryDayTrafficDataByDetectionSectionRequest) returns (UpdateHistoryDayTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      patch: "/api/v1/traffic/history_day/detection_section",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DeleteHistoryDayTrafficDataByDetectionSection(DeleteTrafficDataByDetectionSectionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/traffic/history_day/detection_section"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };    
  }

  rpc BulkCreateHistoryDayTrafficDataByDetectionSection(BulkCreateTrafficDataByDetectionSectionRequest) returns (BulkCreateTrafficDataByDetectionSectionResponse) {
    option (google.api.http) = {
      post: "/api/v1/traffic/history_day/detection_section/bulk",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc GetHistoryDayTrafficDataByDetectionSectionStatistics(GetTrafficDataByDetectionSectionStatisticsRequest) returns (GetTrafficDataByDetectionSectionStatisticsResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_section/statistics"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc ListHistoryDayTrafficDataByDetectionSectionDaily(ListTrafficDataByDetectionSectionDailyRequest) returns (ListHistoryDayTrafficDataByDetectionSectionDailyResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_section/daily"     
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }

  rpc DownloadHistoryDayTrafficDataByDetectionSection(DownloadTrafficDataByDetectionSectionRequest) returns (DownloadResponse) {
    option (google.api.http) = {
      get: "/api/v1/traffic/history_day/detection_section/download"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "bearer";
        }
      }
    };
  }
}


message ListHistoryDayTrafficDataByDetectionSectionResponse {
  repeated HistoryTrafficDataByDetectionSection history_day_traffic_data_by_detection_section = 1;
  uint32 total_count = 2;
}

message GetHistoryDayTrafficDataByDetectionSectionResponse {
  repeated HistoryTrafficDataByDetectionSection history_day_traffic_data_by_detection_section = 1;
  uint32 total_count = 2;
}

message CreateHistoryDayTrafficDataByDetectionSectionRequest {
  HistoryTrafficDataByDetectionSection history_day_traffic_data_by_detection_section = 1;
}

message CreateHistoryDayTrafficDataByDetectionSectionResponse {
  HistoryTrafficDataByDetectionSection history_day_traffic_data_by_detection_section = 1;
}

message UpdateHistoryDayTrafficDataByDetectionSectionRequest {
  HistoryTrafficDataByDetectionSection history_day_traffic_data_by_detection_section = 1;
}

message UpdateHistoryDayTrafficDataByDetectionSectionResponse {
  HistoryTrafficDataByDetectionSection history_day_traffic_data_by_detection_section = 1;
}

message ListHistoryDayTrafficDataByDetectionSectionDailyResponse {
  repeated HistoryTrafficDataByDetectionSection daily_stats = 1;
}